Refactor GHA workflows (#66)
* site/scripts/index.js forward process args to child processes

* don't run GHA workflows on forks, bump actions/checkout to v3

* update readme

--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -8,9 +8,10 @@ on:
 jobs:
   markdown-link-check:
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'janosh'
     steps:
       - name: Check out repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Run markdown link check
         uses: gaurav-nelson/github-action-markdown-link-check@v1
