Add site 46 https://concertmash.com (#69)
* Add site 46 https://concertmash.com

* include .ts files in eslint pre-commit hook

* add ConcertMash screenshots

Co-authored-by: Janosh Riebesell <janosh.riebesell@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,7 +52,7 @@ repos:
     hooks:
       - id: eslint
         types: [file]
-        files: \.(svelte|js)$
+        files: \.(svelte|js|ts)$
         additional_dependencies:
           - eslint
           - svelte
