replace @svicons svg icons with @iconify
bump svelte-multiselect to v5, means no longer need to deal with objects in bind:selected, we now get simple strings

--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -10,6 +10,8 @@
     // enable source maps by default.
     "sourceMap": true,
 
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+
+    "types": ["unplugin-icons/types/svelte"]
   }
 }
