--- a/site/package.json
+++ b/site/package.json
@@ -18,31 +18,31 @@
     "check": "svelte-check"
   },
   "devDependencies": {
+    "@iconify-json/fa-brands": "^1.1.1",
+    "@iconify-json/octicon": "^1.1.6",
     "@rollup/plugin-yaml": "^3.1.0",
     "@sveltejs/adapter-static": "^1.0.0-next.29",
-    "@sveltejs/kit": "^1.0.0-next.302",
-    "@svicons/fa-brands": "^0.1.8",
-    "@svicons/octicons": "^0.1.8",
-    "@typescript-eslint/eslint-plugin": "^5.16.0",
-    "@typescript-eslint/parser": "^5.16.0",
+    "@sveltejs/kit": "^1.0.0-next.318",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "dotenv": "^16.0.0",
-    "eslint": "^8.11.0",
+    "eslint": "^8.13.0",
     "eslint-plugin-svelte3": "^3.4.1",
     "imagemin": "^8.0.1",
     "imagemin-webp": "^7.0.0",
     "js-yaml": "^4.1.0",
     "node-fetch": "^3.2.3",
-    "prettier": "^2.6.0",
-    "prettier-plugin-svelte": "^2.6.0",
-    "puppeteer": "^13.5.1",
-    "svelte": "^3.46.4",
-    "svelte-check": "^2.4.6",
+    "prettier": "^2.6.2",
+    "prettier-plugin-svelte": "^2.7.0",
+    "puppeteer": "^13.6.0",
+    "svelte": "^3.47.0",
+    "svelte-check": "^2.7.0",
     "svelte-github-corner": "^0.1.0",
-    "svelte-multiselect": "^4.0.5",
-    "svelte-preprocess": "^4.10.4",
-    "svelte2tsx": "^0.5.6",
-    "typescript": "^4.6.2",
-    "vite": "^2.8.6"
+    "svelte-multiselect": "^5.0.1",
+    "svelte-preprocess": "^4.10.6",
+    "svelte2tsx": "^0.5.9",
+    "typescript": "^4.6.3",
+    "unplugin-icons": "^0.14.1"
   },
   "keywords": [
     "svelte-kit",
