--- a/sites.yml
+++ b/sites.yml
@@ -487,7 +487,7 @@
   repo: https://github.com/hperrin/svelte-material-ui
   siteSrc: https://github.com/hperrin/svelte-material-ui/tree/master/packages/site
   description: Svelte Material UI Components.
-  uses: [MDsveX, TypeScript, highlight.js, remarkjs, Sass]
+  uses: [MDsveX, TypeScript, highlight.js, remark, Sass]
   tags: [material design, component library]
   dateCreated: 2019-07-17
   dateAdded: 2022-04-16
