--- a/uses-links.yml
+++ b/uses-links.yml
@@ -59,6 +59,8 @@ spotify web api: https://github.com/JMPerez/spotify-web-api-js
 supabase: https://supabase.com
 surge.sh: https://surge.sh
 svelte forms lib: https://github.com/tjinauyeung/svelte-forms-lib
+svelte-multiselect: https://github.com/janosh/svelte-multiselect
+sveltekit-i18n: https://github.com/sveltekit-i18n/lib
 svicons: https://github.com/janosh/svicons
 tabler icons: https://tabler-icons.io
 tailwind: https://tailwindcss.com
