--- a/uses-links.yml
+++ b/uses-links.yml
@@ -71,11 +71,12 @@ sveltekit-i18n: https://github.com/sveltekit-i18n/lib
 svicons: https://github.com/janosh/svicons
 tabler icons: https://tabler-icons.io
 tailwind: https://tailwindcss.com
-testing-library: https://testing-library.com
+testing library: https://testing-library.com
 three.js: https://threejs.org
 typescript: https://typescriptlang.org
 underscore: https://underscorejs.org
 uvu: https://github.com/lukeed/uvu
 vercel: https://vercel.com
+vitest: https://vitest.dev
 weepeople: https://github.com/propublica/weepeople
 windi: https://windicss.org
