--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,8 @@ repos:
       - id: end-of-file-fixer
       - id: mixed-line-ending
       - id: trailing-whitespace
+      - id: file-contents-sorter
+        files: ^uses-links\.yml$
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.6.2
@@ -72,16 +74,12 @@ repos:
         language: fail
         files: '^site/static/screenshots/.*(?<!\.webp)$'
 
-  - repo: local
-    hooks:
       - id: no-bracket-links
         name: 'Brackets should not be inside links [[link]](url) -> [[link](url)]'
         entry: '\]\]\('
         language: pygrep
         types: [markdown]
 
-  - repo: local
-    hooks:
       - id: no-http
         name: URLs must use HTTPS
         entry: 'http:'
@@ -89,8 +87,6 @@ repos:
         types_or: [markdown, yaml]
         exclude: .pre-commit-config.yaml
 
-  - repo: local
-    hooks:
       - id: no-repeated-whitespace
         name: No repeated spaces
         entry: '\S+\s{2,}'
@@ -98,8 +94,6 @@ repos:
         types: [text]
         exclude_types: [javascript]
 
-  - repo: local
-    hooks:
       - id: format-urls
         name: Format URLs
         entry: utils/format_urls.py
