update deps, add site/vite.config.ts
update GH metadata
add markdown description parsing with markedjs
add og:creator, add:site meta tags to app.html

--- a/site/package.json
+++ b/site/package.json
@@ -9,39 +9,41 @@
   "type": "module",
   "bugs": "https://github.com/janosh/awesome-svelte-kit/issues",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
+    "dev": "vite dev",
+    "build": "vite build",
     "prebuild": "node scripts/index.js",
     "predev": "node scripts/index.js",
-    "preview": "svelte-kit preview",
+    "preview": "vite preview",
     "serve": "yarn build && yarn preview",
     "check": "svelte-check"
   },
   "devDependencies": {
-    "@iconify-json/fa-brands": "^1.1.1",
-    "@iconify-json/octicon": "^1.1.10",
+    "@iconify-json/fa-brands": "^1.1.2",
+    "@iconify-json/octicon": "^1.1.12",
     "@rollup/plugin-yaml": "^3.1.0",
-    "@sveltejs/adapter-static": "^1.0.0-next.34",
-    "@sveltejs/kit": "^1.0.0-next.347",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
+    "@sveltejs/adapter-static": "^1.0.0-next.35",
+    "@sveltejs/kit": "^1.0.0-next.370",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "dotenv": "^16.0.1",
-    "eslint": "^8.16.0",
+    "eslint": "^8.19.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "imagemin": "^8.0.1",
     "imagemin-webp": "^7.0.0",
     "js-yaml": "^4.1.0",
-    "prettier": "^2.6.2",
+    "marked": "^4.0.18",
+    "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
-    "puppeteer": "^14.2.0",
-    "svelte": "^3.48.0",
-    "svelte-check": "^2.7.1",
+    "puppeteer": "^15.3.2",
+    "svelte": "^3.49.0",
+    "svelte-check": "^2.8.0",
     "svelte-github-corner": "^0.1.0",
-    "svelte-multiselect": "^5.0.1",
-    "svelte-preprocess": "^4.10.6",
-    "svelte2tsx": "^0.5.10",
-    "typescript": "^4.7.2",
-    "unplugin-icons": "^0.14.3"
+    "svelte-multiselect": "^5.0.3",
+    "svelte-preprocess": "^4.10.7",
+    "svelte2tsx": "^0.5.11",
+    "typescript": "^4.7.4",
+    "unplugin-icons": "^0.14.7",
+    "vite": "^2.9.14"
   },
   "keywords": [
     "svelte-kit",
