--- a/uses-links.yml
+++ b/uses-links.yml
@@ -73,6 +73,7 @@ svelte-highlight: https://github.com/metonym/svelte-highlight
 svelte-intl-precompile: https://github.com/cibernox/svelte-intl-precompile
 svelte-markdown: https://github.com/pablo-abc/svelte-markdown
 svelte-multiselect: https://github.com/janosh/svelte-multiselect
+svelte-toasts: https://github.com/mzohaibqc/svelte-toasts
 sveltekit-i18n: https://github.com/sveltekit-i18n/lib
 svicons: https://github.com/janosh/svicons
 tabler icons: https://tabler-icons.io
