--- a/site/src/sites.yml
+++ b/site/src/sites.yml
@@ -1280,8 +1280,8 @@
       company: Danmarks Tekniske Universitet
 - title: Houdini GraphQL
   url: https://houdinigraphql.com
-  repo: https://github.com/HoudiniGraphql/docs
-  description: Documentation site for houdini.
+  repo: https://github.com/HoudiniGraphQL/houdini
+  description: Documentation site for Houdini.
   uses:
     - PNPM
     - MDsveX
@@ -2124,4 +2124,38 @@
       avatar: https://avatars.githubusercontent.com/u/73770990?v=4
       name: PRATAP CHANDRA MAHARANA
       location: semiliguda,odisha
+      company: null
+- title: Joy of Code
+  url: https://joyofcode.xyz
+  repo: https://github.com/mattcroat/joy-of-code
+  description: 🌸 Joy of Code is a digital garden growing curious minds.
+  uses:
+    - GitHub API
+    - Monaco
+    - Playwright
+    - Google Analytics
+    - Supabase
+    - Vercel
+    - PNPM
+    - Sass
+    - TypeScript
+    - remark
+    - rehype
+  tags:
+    - blog
+    - cms
+    - community
+    - open source
+  date_created: 2020-10-19T00:00:00.000Z
+  date_added: 2022-08-31T00:00:00.000Z
+  last_updated: 2022-08-31T00:00:00.000Z
+  slug: joy-of-code
+  repo_stars: 94
+  contributors:
+    - github: mattcroat
+      twitter: joyofcodedev
+      url: https://matia.xyz/
+      avatar: https://avatars.githubusercontent.com/u/38083522?v=4
+      name: Matia
+      location: Zagreb, Croatia
       company: null
