--- a/site/package.json
+++ b/site/package.json
@@ -19,31 +19,31 @@
   },
   "devDependencies": {
     "@iconify-json/fa-brands": "^1.1.2",
-    "@iconify-json/octicon": "^1.1.16",
+    "@iconify-json/octicon": "^1.1.17",
     "@rollup/plugin-yaml": "^3.1.0",
-    "@sveltejs/adapter-static": "^1.0.0-next.39",
-    "@sveltejs/kit": "^1.0.0-next.423",
-    "@typescript-eslint/eslint-plugin": "^5.33.1",
-    "@typescript-eslint/parser": "^5.33.1",
-    "dotenv": "^16.0.1",
-    "eslint": "^8.22.0",
+    "@sveltejs/adapter-static": "^1.0.0-next.41",
+    "@sveltejs/kit": "^1.0.0-next.465",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "dotenv": "^16.0.2",
+    "eslint": "^8.23.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "imagemin": "^8.0.1",
     "imagemin-webp": "^7.0.0",
     "js-yaml": "^4.1.0",
-    "marked": "^4.0.18",
+    "marked": "^4.1.0",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
-    "puppeteer": "^16.1.1",
-    "svelte": "^3.49.0",
-    "svelte-check": "^2.8.1",
+    "puppeteer": "^17.1.0",
+    "svelte": "^3.50.0",
+    "svelte-check": "^2.9.0",
     "svelte-github-corner": "^0.1.0",
-    "svelte-multiselect": "^5.0.6",
+    "svelte-multiselect": "^6.0.0",
     "svelte-preprocess": "^4.10.7",
-    "svelte2tsx": "^0.5.14",
-    "typescript": "^4.7.4",
-    "unplugin-icons": "^0.14.8",
-    "vite": "^3.0.8"
+    "svelte2tsx": "^0.5.16",
+    "typescript": "^4.8.2",
+    "unplugin-icons": "^0.14.9",
+    "vite": "^3.1.0-beta.2"
   },
   "keywords": [
     "sveltekit",
