--- a/uses-links.yml
+++ b/uses-links.yml
@@ -81,6 +81,7 @@ testing library: https://testing-library.com
 three.js: https://threejs.org
 typescript: https://typescriptlang.org
 underscore: https://underscorejs.org
+unocss: https://github.com/unocss/unocss
 uvu: https://github.com/lukeed/uvu
 vercel: https://vercel.com
 vitest: https://vitest.dev
