--- a/site/tsconfig.json
+++ b/site/tsconfig.json
@@ -3,7 +3,7 @@
     "strict": true,
     "module": "esnext",
     "target": "esnext",
-    "moduleResolution": "node", // needed for import { ... } from 'svelte' in TS files
+    "moduleResolution": "node",
 
     // To have warnings/errors of the Svelte compiler at the correct position,
     // enable source maps by default.
