--- a/site/package.json
+++ b/site/package.json
@@ -18,15 +18,14 @@
     "check": "svelte-check"
   },
   "devDependencies": {
-    "@iconify-json/fa-brands": "^1.1.2",
-    "@iconify-json/octicon": "^1.1.17",
+    "@iconify/svelte": "^3.0.0",
     "@rollup/plugin-yaml": "^3.1.0",
-    "@sveltejs/adapter-static": "^1.0.0-next.41",
-    "@sveltejs/kit": "^1.0.0-next.465",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@sveltejs/adapter-static": "^1.0.0-next.43",
+    "@sveltejs/kit": "^1.0.0-next.484",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
     "dotenv": "^16.0.2",
-    "eslint": "^8.23.0",
+    "eslint": "^8.23.1",
     "eslint-plugin-svelte3": "^4.0.0",
     "imagemin": "^8.0.1",
     "imagemin-webp": "^7.0.0",
@@ -34,16 +33,15 @@
     "marked": "^4.1.0",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
-    "puppeteer": "^17.1.0",
-    "svelte": "^3.50.0",
+    "puppeteer": "^17.1.3",
+    "svelte": "^3.50.1",
     "svelte-check": "^2.9.0",
     "svelte-github-corner": "^0.1.0",
-    "svelte-multiselect": "^6.0.0",
+    "svelte-multiselect": "^6.0.2",
     "svelte-preprocess": "^4.10.7",
-    "svelte2tsx": "^0.5.16",
-    "typescript": "^4.8.2",
-    "unplugin-icons": "^0.14.9",
-    "vite": "^3.1.0-beta.2"
+    "svelte2tsx": "^0.5.18",
+    "typescript": "^4.8.3",
+    "vite": "^3.1.2"
   },
   "keywords": [
     "sveltekit",
