--- a/sites.yml
+++ b/sites.yml
@@ -59,7 +59,7 @@
   repo: https://github.com/janosh/tikz
   description: Random collection of MIT-licensed standalone TikZ images, mostly about physics and machine learning.
   tags: [research, science, diagrams, graphics, latex]
-  uses: [TypeScript, Netlify, Svicons, svelte-multiselect, pre-commit]
+  uses: [TypeScript, Netlify, svelte-multiselect, pre-commit]
   date_created: 2020-08-09
   date_added: 2021-05-25
   last_updated: 2022-05-10
