Add housesof.world website (#79)
* Add housesof.world website

I thought it could be nicely listed here ✌️
Sorry for the other PR, not sure what happened there!

* add screenshots and update readme with https://housesof.world

Co-authored-by: Janosh Riebesell <janosh.riebesell@gmail.com>

--- a/site/src/sites.yml
+++ b/site/src/sites.yml
@@ -2256,3 +2256,30 @@
       name: iffyloop
       location: null
       company: '@blitcrush'
+- title: Houses of World
+  url: https://housesof.world
+  description: >-
+    A travel, photography and design project showcasing charismatic houses
+    around the world.
+  uses:
+    - Typescript
+    - SCSS
+    - PostCSS
+    - Motion One
+    - OGL
+    - WebGL
+    - Directus
+    - Swell Commerce
+    - Vercel
+  tags:
+    - animations
+    - transitions
+    - photography
+    - commerce
+    - design
+    - typography
+    - graphic design
+  date_created: 2022-09-27T00:00:00.000Z
+  date_added: 2022-09-30T00:00:00.000Z
+  last_updated: 2022-09-30T00:00:00.000Z
+  slug: houses-of-world
