--- a/uses-links.yml
+++ b/uses-links.yml
@@ -14,6 +14,7 @@ cytoscape.js: https://js.cytoscape.org
 d3: https://d3js.org
 daisyui: https://daisyui.com
 dart: https://dart.dev
+directus: https://directus.io
 docker: https://docker.com
 dynamodb: https://aws.amazon.com/dynamodb
 echarts: https://github.com/apache/echarts
@@ -46,9 +47,11 @@ markedjs: https://marked.js.org
 mdsvex: https://github.com/pngwn/MDsveX
 mocha: https://mochajs.org
 monaco: https://microsoft.github.io/monaco-editor
+motion one: https://motion.dev
 mvp.css: https://github.com/andybrewer/mvp
 netlify: https://netlify.com
 octokit: https://github.com/octokit/octokit.js
+ogl: https://github.com/oframe/ogl
 pandoc: https://pandoc.org
 panzoom: https://github.com/timmywil/panzoom
 plausible: https://plausible.io
@@ -76,6 +79,7 @@ svelte-markdown: https://github.com/pablo-abc/svelte-markdown
 svelte-multiselect: https://github.com/janosh/svelte-multiselect
 svelte-toasts: https://github.com/mzohaibqc/svelte-toasts
 sveltekit-i18n: https://github.com/sveltekit-i18n/lib
+swell commerce: https://swell.is
 tailwind: https://tailwindcss.com
 testing library: https://testing-library.com
 three.js: https://threejs.org
@@ -85,4 +89,5 @@ unocss: https://github.com/unocss/unocss
 uvu: https://github.com/lukeed/uvu
 vercel: https://vercel.com
 vitest: https://vitest.dev
+webgl: https://developer.mozilla.org/docs/Web/API/WebGL_API
 ytdl-core: https://github.com/fent/node-ytdl-core
