Add Omnia Editor (#81)
* respect site filters and sorting in PrevNextSite.svelte

* add site omnia-editor

* update deps

--- a/site/src/sites.yml
+++ b/site/src/sites.yml
@@ -839,6 +839,7 @@
     - data viz
     - statistics
     - machine learning
+  date_created: 2021-01-01T00:00:00.000Z
   date_added: 2021-10-19T00:00:00.000Z
   last_updated: 2021-10-17T00:00:00.000Z
   slug: cybernetic.dev
@@ -2283,3 +2284,29 @@
   date_added: 2022-09-30T00:00:00.000Z
   last_updated: 2022-09-30T00:00:00.000Z
   slug: houses-of-world
+- title: omnia-editor
+  url: https://omnia-editor.vercel.app
+  repo: https://github.com/TorstenDittmann/omnia-editor
+  description: A lightweight open source block style editor built for the modern web.
+  uses:
+    - Sass
+    - TypeScript
+  tags:
+    - editor
+    - html
+    - open source
+    - writing
+    - wysiwyg
+  date_created: 2020-03-05T00:00:00.000Z
+  date_added: 2022-10-16T00:00:00.000Z
+  last_updated: 2022-10-16T00:00:00.000Z
+  slug: omnia-editor
+  repo_stars: 16
+  contributors:
+    - github: TorstenDittmann
+      twitter: DittmannTorsten
+      url: https://dittmann.dev
+      avatar: https://avatars.githubusercontent.com/u/1759475?v=4
+      name: Torsten Dittmann
+      location: Freilassing, Germany
+      company: Appwrite
