--- a/.github/workflows/new-site.yml
+++ b/.github/workflows/new-site.yml
@@ -18,12 +18,12 @@ jobs:
       - name: Set up node
         uses: actions/setup-node@v3
         with:
-          node-version: 17
-          cache: yarn
-          cache-dependency-path: site/yarn.lock
+          node-version: 18
+          cache: pnpm
+          cache-dependency-path: site/pnpm-lock.yaml
 
       - name: Install dependencies
-        run: yarn add puppeteer js-yaml imagemin imagemin-webp
+        run: pnpm add puppeteer js-yaml imagemin imagemin-webp
 
       - name: Update existing site screenshots and repo contributors on scheduled runs
         if: github.event_name == 'schedule'
