--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,9 @@
 [build]
 base = "site/"
-command = "yarn build"
+command = "pnpm build"
 publish = "build"
 # only redeploy if base directory site/ changed
 ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF ."
 
 [build.environment]
 NODE_VERSION = "18.6.0"
-YARN_VERSION = "1.22.19"
