--- a/site/package.json
+++ b/site/package.json
@@ -14,18 +14,18 @@
     "prebuild": "node scripts/index.js",
     "predev": "node scripts/index.js",
     "preview": "vite preview",
-    "serve": "yarn build && yarn preview",
+    "serve": "pnpm build && pnpm preview",
     "check": "svelte-check"
   },
   "devDependencies": {
     "@iconify/svelte": "^3.0.0",
-    "@rollup/plugin-yaml": "^4.0.0",
-    "@sveltejs/adapter-static": "^1.0.0-next.44",
-    "@sveltejs/kit": "^1.0.0-next.516",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
+    "@rollup/plugin-yaml": "^4.0.1",
+    "@sveltejs/adapter-static": "1.0.0-next.46",
+    "@sveltejs/kit": "1.0.0-next.525",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "dotenv": "^16.0.3",
-    "eslint": "^8.25.0",
+    "eslint": "^8.26.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "imagemin": "^8.0.1",
     "imagemin-webp": "^7.0.0",
@@ -33,15 +33,15 @@
     "marked": "^4.1.1",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.8.0",
-    "puppeteer": "^19.0.0",
+    "puppeteer": "^19.2.0",
     "svelte": "^3.52.0",
     "svelte-check": "^2.9.2",
     "svelte-github-corner": "^0.1.0",
-    "svelte-multiselect": "^6.1.0",
+    "svelte-multiselect": "^8.0.0",
     "svelte-preprocess": "^4.10.7",
     "svelte2tsx": "^0.5.20",
     "typescript": "^4.8.4",
-    "vite": "^3.1.8"
+    "vite": "^3.2.0"
   },
   "keywords": [
     "sveltekit",
